# weather_parser

./: .env.template  .gitignore  Makefile  README.md  add_cities.sh  docker-compose.yml  setup.cfg
app/: Dockerfile  exceptions.py  main.py  pyproject.toml
app/api/: depends.py  routers.py
app/api/v1/: routers.py
app/core/: config.py
app/db/: models.py  session.py
app/db/repositories/: city.py  weather.py
app/migrations/: env.py
app/migrations/versions/: 13027d3d2946_add_pg_trgm_extension.py  96e3c34b6a7a_.py
app/network/: base.py  openweather.py
app/scheduler/: tasks.py
app/schemas/: city.py  weather.py
